--- a/app/src/main/res/drawable/find_id_result_yaho.xml
+++ b/app/src/main/res/drawable/find_id_result_yaho.xml
@@ -2,8 +2,10 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#80eeeeee" />
+    <solid android:color="#EFEFEF" />
     <stroke
-        android:width="0.3dp"
-        android:color="#707070" />
+        android:width="1dp"
+        android:color="#D6D6D6"
+        />
+    <corners android:radius="10dp"/>
 </shape>
