--- a/app/src/main/res/layout/find_id_result.xml
+++ b/app/src/main/res/layout/find_id_result.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -69,20 +70,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_width="245dp"
-        android:layout_height="138dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginTop="223dp"
-        android:layout_marginEnd="57dp"
-        android:layout_marginBottom="279dp"
-        android:src="@drawable/yaho_cat"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.296" />
-
     <View
         android:layout_width="296.7dp"
         android:layout_height="116.7dp"
@@ -92,6 +79,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.545" />
+
+
+    <ImageView
+        android:layout_width="169dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="223dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginBottom="279dp"
+        android:src="@drawable/yaho_cat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.289" />
 
     <Button
         android:id="@+id/login_btn"
