--- a/app/src/main/res/drawable/user_info_view.xml
+++ b/app/src/main/res/drawable/user_info_view.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#7feeeeee" />
+    <solid android:color="#7D75F5" />
     <stroke
         android:width="1dp"
-        android:color="#707070" />
+        android:color="#7D75F5" />
+    <corners android:radius="6.7dp"/>
 </shape>
