--- a/app/src/main/res/drawable/user_info_change_btn.xml
+++ b/app/src/main/res/drawable/user_info_change_btn.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#7feeeeee" />
+    <solid android:color="#ffffff" />
     <stroke
-        android:width="1dp"
+        android:width="0.3dp"
         android:color="#707070" />
+    <corners android:radius="3.3dp"/>
 </shape>
