--- a/app/src/main/res/layout/change_email.xml
+++ b/app/src/main/res/layout/change_email.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/back_button6"
+        android:id="@+id/back_change_email"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
@@ -72,6 +72,7 @@
         app:layout_constraintVertical_bias="0.908" />
 
     <EditText
+        android:id="@+id/edt_email"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
@@ -89,6 +90,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
+        android:id="@+id/change_email_cancel"
         android:layout_width="70dp"
         android:layout_height="35dp"
         android:background="@drawable/change_name_btn_c"
@@ -102,6 +104,7 @@
         app:layout_constraintVertical_bias="0.443" />
 
     <Button
+        android:id="@+id/change_email_save"
         android:layout_width="70dp"
         android:layout_height="35dp"
         android:background="@drawable/change_name_btn_s"
