--- a/app/src/main/res/layout/change_pass.xml
+++ b/app/src/main/res/layout/change_pass.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/back_button6"
+        android:id="@+id/back_change_pass"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
@@ -73,6 +73,7 @@
         app:layout_constraintVertical_bias="0.885" />
 
     <EditText
+        android:id="@+id/edt_old_pass"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
@@ -87,22 +88,40 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.86" />
 
     <TextView
+        android:id="@+id/new_pass_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호는 숫자+영문자+특수문자(~!@#$%^&amp;*-+=)를 조합하여\n반드시 8자리 이상으로 설정해 주시기를 바랍니다."
         android:textColor="#FF0000"
         android:textSize="10dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.308"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.536" />
+        app:layout_constraintVertical_bias="0.517" />
+
+    <TextView
+        android:id="@+id/old_pass_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="기존의 비밀번호가 맞는지 다시 한번 확인해주세요"
+        android:textColor="#FF0000"
+        android:textSize="10dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.221"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.379" />
 
     <EditText
+        android:id="@+id/edt_new_pass1"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
@@ -118,6 +137,7 @@
         app:layout_constraintVertical_bias="0.465" />
 
     <EditText
+        android:id="@+id/edt_new_pass2"
         android:layout_width="320dp"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
@@ -130,9 +150,25 @@
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.615" />
+        app:layout_constraintVertical_bias="0.59" />
+
+    <TextView
+        android:id="@+id/new_pass_check2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비밀번호가 일치하지 않습니다!"
+        android:textColor="#FF0000"
+        android:textSize="10dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.161"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.627" />
 
     <Button
+        android:id="@+id/change_pass_cancel"
         android:layout_width="70dp"
         android:layout_height="35dp"
         android:background="@drawable/change_name_btn_c"
@@ -143,9 +179,10 @@
         app:layout_constraintHorizontal_bias="0.604"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.693" />
+        app:layout_constraintVertical_bias="0.712" />
 
     <Button
+        android:id="@+id/change_pass_save"
         android:layout_width="70dp"
         android:layout_height="35dp"
         android:background="@drawable/change_name_btn_s"
@@ -156,6 +193,6 @@
         app:layout_constraintHorizontal_bias="0.865"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.693" />
+        app:layout_constraintVertical_bias="0.712" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
