--- a/app/src/main/res/layout/layout_navigation_header.xml
+++ b/app/src/main/res/layout/layout_navigation_header.xml
@@ -42,7 +42,7 @@
 
     <!--사용자이름-->
     <TextView
-        android:id="@+id/tv_main_id"
+        android:id="@+id/tv_main_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
