--- a/app/src/main/res/layout/find_store.xml
+++ b/app/src/main/res/layout/find_store.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -17,7 +18,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/back_user_info"
+        android:id="@+id/back_find_store"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
@@ -64,15 +65,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ListView
-        android:layout_width="221dp"
-        android:layout_height="33dp"
-
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="242dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="69dp"
         android:layout_marginTop="133dp"
+        android:layout_marginEnd="69dp"
         android:layout_marginBottom="473dp"
+        android:background="@drawable/spinner_stroke"
+        android:entries="@array/seoul_array"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.505" />
+
+    <EditText
+        android:id="@+id/find_store_edt"
+        android:layout_width="242dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="177dp"
+        android:layout_marginEnd="69dp"
+        android:layout_marginBottom="410dp"
+        android:background="@drawable/find_store_edt"
+        android:hint="원하시는 매장을 검색해주세요"
+        android:textColor="@color/black"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.645" />
+
+    <Button
+        android:id="@+id/find_btn"
+        android:layout_width="240dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="240dp"
+        android:backgroundTint="#9690F6"
+        android:text="매장 찾기"
+        android:textColor="#ffffff"
+        android:textSize="17dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.597" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
