--- a/app/src/main/res/drawable/online_used_btn.xml
+++ b/app/src/main/res/drawable/online_used_btn.xml
@@ -2,9 +2,9 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ffffff" />
+    <solid android:color="#9E9AFF" />
     <stroke
-        android:width="0.7dp"
-        android:color="#707070" />
-    <corners android:radius="3.3dp"/>
+        android:width="1dp"
+        android:color="#9E9AFF" />
+    <corners android:radius="10dp"/>
 </shape>
