--- a/app/src/main/res/layout/store_information.xml
+++ b/app/src/main/res/layout/store_information.xml
@@ -72,4 +72,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.104" />
+    구현 가능성 낮음
 </androidx.constraintlayout.widget.ConstraintLayout>
