--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,13 +28,14 @@
         android:adjustViewBounds="true"
         android:backgroundTint="#00FFFFFF"
         android:scaleType="fitCenter"
+        android:src="@drawable/backbtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.391"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/backbtn" />
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/textView12"
@@ -48,10 +50,26 @@
         app:layout_constraintStart_toStartOf="@+id/view2"
         app:layout_constraintTop_toTopOf="@+id/view2" />
 
+    <ImageButton
+        android:id="@+id/f5"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="307dp"
+        android:layout_marginEnd="1dp"
+        android:adjustViewBounds="true"
+        android:backgroundTint="#00FFFFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/restart"
+        app:layout_constraintBottom_toBottomOf="@+id/view2"
+        app:layout_constraintEnd_toEndOf="@+id/view2"
+        app:layout_constraintStart_toStartOf="@+id/view2"
+        app:layout_constraintTop_toTopOf="@+id/view2"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <View
         android:id="@+id/view"
-        android:layout_width="66.7dp"
-        android:layout_height="66.7dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginStart="53dp"
         android:layout_marginTop="71dp"
         android:layout_marginEnd="240dp"
@@ -64,8 +82,8 @@
 
     <ImageView
         android:id="@+id/profile_img"
-        android:layout_width="43.3dp"
-        android:layout_height="43.3dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/profile_cat"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/view"
@@ -80,45 +98,49 @@
         android:layout_marginTop="93dp"
         android:layout_marginEnd="173dp"
         android:layout_marginBottom="524dp"
+        android:gravity="left"
         android:text="박해림"
         android:textColor="#151515"
-        android:textSize="16.7sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/user_info_nn_id"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
+        android:layout_marginStart="160dp"
         android:layout_marginTop="115dp"
-        android:layout_marginEnd="160dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="514dp"
+        android:gravity="left"
         android:text="포키포 #diiert33"
         android:textColor="#8c8c8c"
-        android:textSize="8.3sp"
+        android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.517"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505" />
+        app:layout_constraintVertical_bias="0.583" />
 
     <Button
         android:id="@+id/change_name"
-        android:layout_width="40dp"
-        android:layout_height="13.3dp"
+        android:layout_width="50dp"
+        android:layout_height="30dp"
         android:layout_marginStart="266dp"
         android:layout_marginTop="97dp"
         android:layout_marginEnd="53dp"
         android:layout_marginBottom="529dp"
         android:background="@drawable/change_btn"
         android:text="이름수정"
-        android:textSize="6.7sp"
+        android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,58 +174,15 @@
         app:layout_constraintTop_toTopOf="@+id/view3"
         app:layout_constraintVertical_bias="0.466" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="207dp"
-        android:layout_marginEnd="276dp"
-        android:layout_marginBottom="419dp"
-        android:text="포키포"
-        android:textColor="#000000"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="273.3dp"
-        android:layout_height="0.3dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="230dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginBottom="409dp"
-        android:background="#707070"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:layout_width="23.3dp"
-        android:layout_height="13.3dp"
-        android:layout_marginStart="283dp"
-        android:layout_marginTop="207dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="419dp"
-        android:background="@drawable/user_info_change_btn"
-        android:text="수정"
-        android:textSize="6.7sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view4"
         android:layout_width="293.3dp"
         android:layout_height="33.3dp"
         android:layout_marginStart="33dp"
-        android:layout_marginTop="294dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="33dp"
-        android:layout_marginBottom="312dp"
+        android:layout_marginBottom="250dp"
         android:background="@drawable/user_info_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -226,15 +205,15 @@
 
     <TextView
         android:id="@+id/user_info_nn"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="53dp"
         android:layout_marginTop="207dp"
-        android:layout_marginEnd="276dp"
-        android:layout_marginBottom="419dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginBottom="370dp"
         android:text="포키포"
         android:textColor="#000000"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -243,11 +222,11 @@
 
     <View
         android:layout_width="273.3dp"
-        android:layout_height="0.3dp"
+        android:layout_height="0.5dp"
         android:layout_marginStart="43dp"
         android:layout_marginTop="230dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginBottom="409dp"
+        android:layout_marginBottom="365dp"
         android:background="#707070"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -256,15 +235,15 @@
 
     <Button
         android:id="@+id/change_nn"
-        android:layout_width="23.3dp"
-        android:layout_height="13.3dp"
-        android:layout_marginStart="283dp"
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="260dp"
         android:layout_marginTop="207dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="419dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="370dp"
         android:background="@drawable/user_info_change_btn"
         android:text="수정"
-        android:textSize="6.7sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -272,30 +251,28 @@
 
     <TextView
         android:id="@+id/user_info_email"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="53dp"
         android:layout_marginTop="240dp"
-        android:layout_marginEnd="219dp"
-        android:layout_marginBottom="386dp"
+        android:layout_marginEnd="180dp"
+        android:layout_marginBottom="300dp"
         android:text="yjec14@naver.com"
         android:textColor="#000000"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:layout_width="273.3dp"
-        android:layout_height="0.3dp"
+        android:layout_height="0.5dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="263dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginBottom="375dp"
+        android:layout_marginBottom="110dp"
         android:background="#707070"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -304,15 +281,15 @@
 
     <Button
         android:id="@+id/change_email"
-        android:layout_width="23.3dp"
-        android:layout_height="13.3dp"
-        android:layout_marginStart="283dp"
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="260dp"
         android:layout_marginTop="240dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="386dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="300dp"
         android:background="@drawable/user_info_change_btn"
         android:text="수정"
-        android:textSize="6.7sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -321,28 +298,28 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="337dp"
-        android:layout_marginEnd="266dp"
-        android:layout_marginBottom="289dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="330dp"
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="130dp"
         android:text="비밀번호"
         android:textColor="#000000"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.593"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.505" />
+        app:layout_constraintVertical_bias="0.472" />
 
     <View
         android:layout_width="273.3dp"
-        android:layout_height="0.3dp"
+        android:layout_height="0.5dp"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="330dp"
         android:layout_marginEnd="43dp"
-        android:layout_marginBottom="279dp"
+        android:layout_marginBottom="110dp"
         android:background="#707070"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -351,15 +328,15 @@
 
     <Button
         android:id="@+id/change_pass"
-        android:layout_width="23.3dp"
-        android:layout_height="13.3dp"
-        android:layout_marginStart="283dp"
-        android:layout_marginTop="337dp"
-        android:layout_marginEnd="53dp"
-        android:layout_marginBottom="289dp"
+        android:layout_width="40dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="260dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="110dp"
         android:background="@drawable/user_info_change_btn"
         android:text="수정"
-        android:textSize="6.7sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
