--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -107,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
-                android:text="추천상품"
+                android:text="추천상품1"
                 android:textSize="25sp"
                 app:layout_constraintBottom_toTopOf="@+id/gallery"
                 app:layout_constraintLeft_toLeftOf="parent"
